# CosmOS

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: pyproject.toml  requirements.txt
backend/cosmos/: __init__.py
backend/cosmos/ai/: __init__.py  scientist.py
backend/cosmos/api/: __init__.py  main.py  routes.py  schemas.py
backend/cosmos/engine/: __init__.py  simulator.py  timeline.py
backend/cosmos/physics/: __init__.py  constants.py  cosmology.py  dimensions.py  life.py  parameters.py  stars.py
backend/cosmos/storage/: __init__.py  repository.py
backend/genesis/: __init__.py
backend/genesis/ai/: __init__.py  scientist.py  whatif.py
backend/genesis/api/: __init__.py  main.py  routes.py  schemas.py
backend/genesis/engine/: __init__.py  scorecard.py  simulator.py
backend/genesis/physics/: __init__.py  chemistry.py  civilization.py  constants.py  cosmology.py  nucleosynthesis.py  parameters.py  planets.py  structure.py
backend/genesis/storage/: repository.py
backend/tests/: test_ai.py  test_api.py  test_engine.py  test_physics_validation.py
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  PHYSICS_MODEL.md  USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AIScientist.tsx  ControlPanel.tsx  SavePanel.tsx  Scorecard.tsx  Slider.tsx  Timeline.tsx  Viewport.tsx  WhatIfPanel.tsx
frontend/src/engine/: aiScientist.ts  chemistry.ts  civilization.ts  index.ts  (+14 more)
(+5 files in other folders)
