[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmos-engine"
version = "1.0.0"
description = "CosmOS -- a universe creation and evolution simulator"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["cosmos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=cosmos --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*"]
